<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#252525">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="36dp"
        android:paddingBottom="36dp">
        <TextView
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="#5DFF33"
            android:textSize="30sp"
            android:text="@string/create_new_account"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="#FF9E9E"
            android:textSize="16sp"
            android:text="@string/please_provide_all_the_required_information"/>
        <androidx.cardview.widget.CardView
            android:backgroundTint="#3B3B3B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="22dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="22dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/username"
            android:textColor="#FF9E9E"
            android:textSize="20sp"
            />
        <EditText

            android:background="@color/transparent"
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/user_name"
            android:textColor="@color/white"
            android:textColorHint="#9CFFFFFF"
            android:textSize="20sp"
            android:inputType="text" />

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/email"
            android:textColor="#FF9E9E"
            android:textSize="20sp"
            />
        <EditText
            android:background="@color/transparent"
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/user_user_user"
            android:textColor="@color/white"
            android:textColorHint="#9CFFFFFF"
            android:textSize="20sp"
            android:inputType="textEmailAddress" />

            <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/password"
            android:textColor="#FF9E9E"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@color/transparent"
            android:hint="..............."
            android:textColor="@color/white"
            android:textColorHint="#9CFFFFFF"
            android:textSize="20sp"
            android:inputType="textPassword" />

            <TextView
            android:id="@+id/txt_error"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:textSize="12sp"
            android:textColor="@color/red"
            />
        <Button
            android:layout_marginTop="17dp"
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9E9E"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            />
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#FFED44"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/have_an_account_login"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            xmlns:tools="http://schemas.android.com/apk/res-auto"
            android:visibility="gone"
            />
        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>
